todo-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: todo
  namespace: todo
spec:
  selector:
    app: todo
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: todo
